crates/crucible-cli/src/tui/testing/snapshots/crucible_cli__tui__testing__inline_viewport_tests__fullscreen_with_content_input_at_bottom.snap
---
source: crates/crucible-cli/src/tui/testing/inline_viewport_tests.rs
expression: h.render()
---
                                                            
                                                            
                                                            
                                                            
                                                            
                                                            
                                                            
 > Hello                                                    
                                                            
 ● Hi! How can I help?                                      
                                                            
                                                            
 >                                                          
                                                            
▸ Plan │ Ready
