crates/crucible-cli/src/tui/testing/snapshots/crucible_cli__tui__testing__inline_viewport_tests__inline_basic_exchange_input_slides_down.snap
---
source: crates/crucible-cli/src/tui/testing/inline_viewport_tests.rs
expression: h.render()
---
┌ Viewport ────────────────────────────────────────────────┐
│                                                          │
│ > Hello                                                  │
│                                                          │
│ ● Hi! How can I help?                                    │
│                                                          │
│                                                          │
│ >                                                        │
│                                                          │
│▸ Plan │ Ready                                            │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
└──────────────────────────────────────────────────────────┘
