crates/crucible-cli/src/tui/testing/snapshots/crucible_cli__tui__testing__inline_viewport_tests__inline_empty_input_at_top.snap
---
source: crates/crucible-cli/src/tui/testing/inline_viewport_tests.rs
expression: h.render()
---
                                                            
                                                            
                                                            
 >                                                          
                                                            
▸ Plan │ Ready
