crates/crucible-cli/src/tui/testing/snapshots/crucible_cli__tui__testing__inline_viewport_tests__inline_multi_turn_fills_viewport.snap
---
source: crates/crucible-cli/src/tui/testing/inline_viewport_tests.rs
expression: h.render()
---
                                                            
 > What is Crucible?                                        
                                                            
 ● Crucible is a knowledge management system that combines  
   wikilinks with AI.                                       
                                                            
 > How do I search?                                         
                                                            
 ● Use the /search command or @ to reference files.         
                                                            
                                                            
 >                                                          
                                                            
▸ Plan │ Ready
