crates/crucible-cli/src/tui/testing/snapshots/crucible_cli__tui__testing__inline_viewport_tests__inline_multiline_messages.snap
---
source: crates/crucible-cli/src/tui/testing/inline_viewport_tests.rs
expression: h.render()
---
                                                            
 > Show me some code                                        
                                                            
 ● Here's an example:                                       
   fn main() {                                              
       println!("Hello");                                   
   }                                                        
   This prints Hello.                                       
                                                            
                                                            
 >                                                          
                                                            
▸ Plan │ Ready
